# schemist

./: .gitignore  =2.0  README.md  pyproject.toml
.github/workflows/: hf-sync.yml  python-package.yml
app/: README.md  app.py  requirements.txt
docs/source/: conf.py  index.md  installation.md  modules.rst  schemist.rst  usage.md
schemist/: __init__.py  cleaning.py  cli.py  collating.py  converting.py  features.py  generating.py  io.py  sanifix4.py  sanifix5.py  splitting.py  tables.py  typing.py
schemist/app/: README.md  app.py  requirements.txt
test/: tests.py
