[project]
name = "schemist"
version = "0.0.1"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Organizing and processing tables of chemical structures."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["science", "chemistry", "SMILES", "SELFIES", "cheminformatics"]

classifiers = [  
  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ 
  "carabiner-tools[pd]>=0.0.3.post1",
  "datamol",
  "descriptastorus==2.6.1",
  "nemony",
  "openpyxl==3.1.0", 
  "pandas",
  "rdkit",
  "requests",
  "selfies",
]

[project.urls]
"Homepage" = "https://github.com/scbirlab/schemist"
"Repository" = "https://github.com/scbirlab/schemist.git"
"Bug Tracker" = "https://github.com/scbirlab/schemist/issues"
"Documentation" = "https://readthedocs.org/schemist"

[project.scripts]  # Optional
schemist = "schemist.cli:main"

[tool.setuptools]
packages = ["schemist"]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"" = ["*.yml"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
